--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,8 @@ jobs:
         id: set_picardjar
         run: |
           eval "$(guix shell -D -f guix.scm --search-paths)"
-          export PICARDJAR=$GUIX_ENVIRONMENT/share/java/picard.jar
+          export PICARDJAR="$GUIX_ENVIRONMENT/share/java/picard.jar"
+          echo $PICARDJAR
           echo "PICARDJAR=$PICARDJAR" >> $GITHUB_ENV
       - name: Configure
         run: | 
