--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,15 +20,9 @@ jobs:
       - name: Guix cache
         id: guix-cache
         uses: actions/cache@v3
-        env:
-          cache-name: pigx-bsseq
         with:
           path: ~/.cache/guix
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/guix.scm') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          key: guix-cache-${{ steps.guix-commit.outputs.guix-commit }}
       - name: Checkout
         uses: actions/checkout@v3
         with:
