update sample_sheet and settings file

--- a/tests/settings.yaml
+++ b/tests/settings.yaml
@@ -7,7 +7,7 @@ general:
   assembly: hg19
   use_bwameth: True
   # bismark is gold standard and uses sensible defaults
-  use_bismark: True
+  use_bismark: False
   methylation-calling:
     minimum-coverage: 1
     minimum-quality: 10
