--- a/report_templates/index.Rmd.in
+++ b/report_templates/index.Rmd.in
@@ -29,7 +29,6 @@ params:
   methSegPng: ''
   scripts_dir: ''
   refGenes_bedfile:   ''
-  webfetch:     ''
   
   prefix:                 ''
   workdir:                ''
@@ -82,11 +81,7 @@ AnnotateSegments  <- TRUE
 inBam <- params$inBam
 bigwigFile <- params$bigwigFile
 
-
 refGenes_bedfile        <- params$refGenes_bedfile
-webfetch                <- tolower(params$webfetch) %in% c("true", "yes")
-
-
 
 scripts_dir  <- params$scripts_dir
 
@@ -271,18 +266,29 @@ cat('- **Methylation Segments BED file**:\n',methSegBed ,'\n')
 
 ```
 
-```{r AnnotateSegmentsHeader, results='asis', eval= AnnotateSegments }
+```{r Annotation.readRefGene,  results='asis', eval= Annotation }
+
+require(genomation,quietly = TRUE)
+## now we parse the gene features
+refgenes.grl <- tryCatch(
+                         expr = readTranscriptFeatures(refGenes_bedfile),
+                         error = function (msg) {
+                             message(paste0("Error while reading transcript features: ", msg))
+                             return(NULL)
+                         })
+
+if( is.null(refgenes.grl) ) {
+    Annotation <- FALSE
+  cat( paste(" In this particular execution of the pipeline, PiGx failed to find the load the gene annotation file ", refGenes_bedfile, ". Thus, the corresponding section was omitted.") )
+  }
+```
+
+```{r AnnotationHeader, results='asis', eval= Annotation }
 cat('## Annotation of Segments\n')
 
 cat('The annotation of the identified regions with genomic features allows for a better understanding and characterization of detected regions.\n')
 ```
 
-
-```{r AnnotateSegmentsDescription, results='asis',eval= AnnotateSegments }
-
-cat('Pigx first searches for a reference gene set for the given genome assembly in the path specified in the settings file. Upon failure to find such a file in this location, Pigx allows the user to query the UCSC table browser directly to fetch the reference gene set using the [rtracklayer](http://bioconductor.org/packages/release/bioc/html/rtracklayer.html) Package [@rtracklayer2009], when the option `webfetch` (in the settings file) is set to `True` -or, equivalently, `yes`. When this option is set to `False` --or `no`--, and the reference gene files are not found, the corresponding sections are simply omitted from this report. 
-Upon acquiring the reference genes, we can determine different features (e.g. promoter, exon, intron)  intrinsic to each gene,  using the `readTranscriptFeatures()` function from [genomation](http://bioinformatics.mdc-berlin.de/genomation/) [@genomation2014] --likewise, for CpG islands and shores.\n')
-```
 
 
 ```{r AnnotateSegments.fetchRefgene, eval= AnnotateSegments }
@@ -327,12 +333,9 @@ segments.grl <- GenomicRanges::split(
   f = overlapping_segments.gr$name
 )
 
-if( fetch_refgen_success )
-  { 
-  annot.gene.list <- annotateWithGeneParts(target = segments.grl,
-                                           feature = refgenes.grl,
-                                           intersect.chr = TRUE)
-  }
+annot.gene.list <- annotateWithGeneParts(target = segments.grl,
+                                        feature = refgenes.grl,
+                                        intersect.chr = TRUE)
 ```
 
 ```{r AnnotateSegments.text2, results='asis', eval= AnnotateSegments }
@@ -342,26 +345,19 @@ cat('Here, we plot the average methylation per segment group and the overlap wit
 ```{r AnnotateSegments.plot,  eval= AnnotateSegments }
 ## percentage of target features overlapping with annotation:
 ## (with promoter > exon > intron precedence)
-if( fetch_refgen_success )
-  { 
-  annot.gene.mat <- as.matrix(sapply(annot.gene.list, function(x) x@precedence))
-  }
+annot.gene.mat <- as.matrix(sapply(annot.gene.list, function(x) x@precedence))
 
-  par(mfrow=c(1,2))
+par(mfrow=c(1,2))
 boxplot(sapply(split(x = overlapping_segments.gr,f = overlapping_segments.gr$name),FUN = function(x) x$score),
         ylab = "Methylation (%)", 
         xlab = "Segment")
 
-if( fetch_refgen_success )
-  { 
-  # plot the target overlap for each segemnt type
-  # barplot(annot.gene.mat,legend.text = TRUE)
-  barplot(annot.gene.mat,
-          ylab = "Overlap (%)",
-          xlab = "Segment")
-  legend("bottomright",legend = rownames(annot.gene.mat),fill = grey(seq.int(0,1,length.out = ncol(annot.gene.mat))))
-  }
-
+# plot the target overlap for each segemnt type
+# barplot(annot.gene.mat,legend.text = TRUE)
+barplot(annot.gene.mat,
+        ylab = "Overlap (%)",
+        xlab = "Segment")
+legend("bottomright",legend = rownames(annot.gene.mat),fill = grey(seq.int(0,1,length.out = ncol(annot.gene.mat))))
 ```
 
 
